[gd_scene load_steps=7 format=2]

[ext_resource path="res://DiloWorld-mLJLv.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://PauseMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=4]
size = 80
outline_size = 2
outline_color = Color( 0.980392, 0.521569, 0.0352941, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="PauseMenu" type="Control"]
margin_right = 1024.0
margin_bottom = 576.0
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 576.0
color = Color( 0.176471, 0.156863, 0.156863, 0.682353 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 363.0
margin_top = 133.0
margin_right = 660.0
margin_bottom = 442.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 297.0
margin_bottom = 85.0
custom_colors/font_color = Color( 0.894118, 0.976471, 0.168627, 1 )
custom_fonts/font = SubResource( 4 )
text = "Paused"
align = 1
valign = 1

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 105.0
margin_right = 297.0
margin_bottom = 135.0
rect_min_size = Vector2( 0, 30 )

[node name="Resume" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 155.0
margin_right = 297.0
margin_bottom = 193.0
custom_fonts/font = SubResource( 1 )
text = "Resume"

[node name="Choose Level" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 213.0
margin_right = 297.0
margin_bottom = 251.0
custom_fonts/font = SubResource( 5 )
text = "Choose Level"

[node name="Return to Main Menu" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 271.0
margin_right = 297.0
margin_bottom = 309.0
custom_fonts/font = SubResource( 3 )
text = "Return to Main Menu"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Choose Level" to="." method="_on_Choose_Level_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Return to Main Menu" to="." method="_on_Return_to_Main_Menu_pressed"]
